--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
 body{
     background-image: url("Asset/Naruto-Shippuden-PNG-Free-Download.png");
+    background-color: blueviolet;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+h1{
+    text-align: center;
+    color: red;
+    text-decoration: underline black;
+    font-size: large;
+}
+
+h2{
+    text-align: center;
+    color: green;
+    text-decoration: underline;
+    font-size: medium;
+}
+
+p{
+    color: blue;
+    font-size: small;
 }
