--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     background-image: url("Asset/Naruto-Shippuden-PNG-Free-Download.png");
-    background-color: blueviolet;
+    background-color: orange;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
